Initialized app ,api, index route & skeleton for the database

--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -4,6 +4,13 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+flask = "*"
+flask-migrate = "*"
+flask-sqlalchemy = "*"
+faker = "*"
+flask-restful = "*"
+sqlalchemy-serializer = "*"
+flask-cors = "*"
 
 [dev-packages]
 
