--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+flask-login = "*"
+bcrypt = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.8"
+python_version = "3.10"
